--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,14 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+#MAC OS specific
+.DS_Store
+
+# IDE specific
+.cache/
+.history/
+.lib/
+dist/*
+.idea
+.idea/*
